apps/home-assistant/ingress-apex.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-apex
  namespace: home-assistant
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: home-assistant-kblab-apex-redirect@kubernetescrd
    homepage.kblab.me/launcher: "false"
    gatus.kblab.me/monitor: "false"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kblab.me
      secretName: kblab-apex-tls
  rules:
    - host: kblab.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
