apps/home-assistant/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`hass.kblab.me`)
      services:
        - name: home-assistant
          port: 8123
